--- a/src/html/parts/header.html
+++ b/src/html/parts/header.html
@@ -1,5 +1,8 @@
-        <header class="header">
-            <div class="container">
-                header
+        <header class="header" data-scroll="150">
+            <div class="header__container container">
+                <div class="header__logo logo"></div>
+                <div class="header__menu menu"></div>
+                <div class="header__contacts contacts__header"></div>
+                <div class="header__bureger"></div>
             </div>
         </header>
