--- a/src/html/parts/header.html
+++ b/src/html/parts/header.html
@@ -1,8 +1,134 @@
         <header class="header" data-scroll="150">
             <div class="header__container container">
-                <div class="header__logo logo"></div>
-                <div class="header__menu menu"></div>
-                <div class="header__contacts contacts__header"></div>
-                <div class="header__bureger"></div>
+                <div class="header__wrap">
+                    <div class="header__logo logo">
+                        <a href="index.html" class="logo__link">
+                            <div class="logo__img img">
+                                <picture>
+                                  <source srcset="@img/logo.avif" type="image/avif">
+                                  <source srcset="@img/logo.webp" type="image/webp">
+                                  <img loading="lazy" src="@img/logo.jpg" class="image" alt="Логотип ООО ОВС-ГРУПП">
+                                </picture>
+                            </div>
+                            <div class="logo__text">ОВС-ГРУПП</div>
+                        </a>
+                    </div>
+                    <div class="header__menu menu">
+                        <nav class="menu__body" data-menu-body>
+                            <ul class="menu__list">
+                                <li class="menu__item">
+                                    <a href="##" class="menu__link">
+                                        <span class="menu__text">О компании</span>
+                                    </a>
+                                </li>
+                                <li class="menu__item">
+                                    <button class="menu__button btn-reset">
+                                        <span class="menu__text">Услуги</span>
+                                        <span class="menu__arrow img">
+                                            <picture>
+                                              <source srcset="@img/icons/arrow-menu.avif" type="image/avif">
+                                              <source srcset="@img/icons/arrow-menu.webp" type="image/webp">
+                                              <img loading="lazy" src="@img/icons/arrow-menu.png" alt="Стрелка меню">
+                                            </picture>
+                                        </span>
+                                    </button>
+                                    <div class="menu__dropdown dropdown">
+                                        <ul class="dropdown__list">
+                                            <li class="dropdown__item">
+                                                <a href="##" class="dropdown__link">
+                                                    <span class="dropdown__icon img">
+                                                        <img loading="lazy" src="@img/icons/arrow.svg" alt="Стрелка меню">
+                                                    </span>
+                                                    <span class="dropdown__text">
+                                                        Техническое обслуживание оборудования АЗС
+                                                    </span>
+                                                </a>
+                                            </li>
+                                            <li class="dropdown__item">
+                                                <a href="##" class="dropdown__link">
+                                                    <span class="dropdown__icon img">
+                                                        <img loading="lazy" src="@img/icons/arrow.svg" alt="Стрелка меню">
+                                                    </span>
+                                                    <span class="dropdown__text">
+                                                        Ремонт и замена оборудования АЗС
+                                                    </span>
+                                                </a>
+                                            </li>
+                                            <li class="dropdown__item">
+                                                <a href="##" class="dropdown__link">
+                                                    <span class="dropdown__icon img">
+                                                        <img loading="lazy" src="@img/icons/arrow.svg" alt="Стрелка меню">
+                                                    </span>
+                                                    <span class="dropdown__text">
+                                                        Монтаж пластиковых и металло-трубопроводов
+                                                    </span>
+                                                </a>
+                                            </li>
+                                            <li class="dropdown__item">
+                                                <a href="##" class="dropdown__link">
+                                                    <span class="dropdown__icon img">
+                                                        <img loading="lazy" src="@img/icons/arrow.svg" alt="Стрелка меню">
+                                                    </span>
+                                                    <span class="dropdown__text">
+                                                        Внедрение автоматизированных систем управления АЗС
+                                                    </span>
+                                                </a>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </li>
+                                <li class="menu__item">
+                                    <button class="menu__button btn-reset">
+                                        <span class="menu__text">Каталог</span>
+                                        <span class="menu__arrow img">
+                                            <picture>
+                                              <source srcset="@img/icons/arrow-menu.avif" type="image/avif">
+                                              <source srcset="@img/icons/arrow-menu.webp" type="image/webp">
+                                              <img loading="lazy" src="@img/icons/arrow-menu.png" alt="Стрелка меню">
+                                            </picture>
+                                        </span>
+                                    </button>
+                                    <div class="menu__dropdown dropdown">
+                                        <ul class="dropdown__list">
+                                            <li class="dropdown__item">
+                                                <a href="##" class="dropdown__link">
+                                                    <span class="dropdown__icon img">
+                                                        <img loading="lazy" src="@img/icons/arrow.svg" alt="Стрелка меню">
+                                                    </span>
+                                                    <span class="dropdown__text">
+                                                        Метрология
+                                                    </span>
+                                                </a>
+                                            </li>
+                                            <li class="dropdown__item">
+                                                <a href="##" class="dropdown__link">
+                                                    <span class="dropdown__icon img">
+                                                        <img loading="lazy" src="@img/icons/arrow.svg" alt="Стрелка меню">
+                                                    </span>
+                                                    <span class="dropdown__text">
+                                                        Топливо-раздаточные краны
+                                                    </span>
+                                                </a>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </li>
+                                <li class="menu__item">
+                                    <a href="##" class="menu__link">
+                                        <span class="menu__text">Контакты</span>
+                                    </a>
+                                </li>
+                            </ul>
+                        </nav>
+                    </div>
+                    <div class="header__contacts contacts__header"></div>
+                    <div class="header__bureger">
+                        <button type="button" class="icon-menu btn-reset" data-icon-menu>
+                            <span></span>
+                            <span></span>
+                            <span></span>
+                        </button>
+                    </div>
+                </div>
             </div>
         </header>
