--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="ru" class="page">
-@@include('html/parts/head.html', {"title":"Главная"})
+@@include('html/parts/head.html', {"title":"Главная ОВС-ГРУПП"})
 <body class="page__body">
     <div class="site-container">
 
 @@include('html/parts/header.html')
 
         <main class="main">
-            
+
         </main>
 
 @@include('html/parts/footer.html')
