--- a/src/html/parts/head.html
+++ b/src/html/parts/head.html
@@ -3,7 +3,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>@@title</title>
+    <link rel="stylesheet" href="css/swiper.min.css">
     <link rel="stylesheet" href="css/style.css">
+    <script defer src="js/swiper.min.js"></script>
     <script defer src="js/app.min.js"></script>
     <script defer src="js/main.min.js"></script>
 </head>
