добавлен блок производителей

--- a/src/html/index/fullscreen.html
+++ b/src/html/index/fullscreen.html
@@ -157,11 +157,11 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="fullscreen__controls controls">
+                        <div class="fullscreen__controls controls-fullscreen">
                             <div class="fullscreen__progress"></div>
-                            <div class="controls__buttons">
-                                <button class="fullscreen__button-prev controls__button-prev btn-reset">
-                                    <div class="controls__icon-prev img">
+                            <div class="controls-fullscreen__buttons">
+                                <button class="fullscreen__button-prev controls-fullscreen__button-prev btn-reset">
+                                    <div class="controls-fullscreen__icon-prev img">
                                         <picture>
                                           <source srcset="@img/icons/icon-prev.avif" type="image/avif">
                                           <source srcset="@img/icons/icon-prev.webp" type="image/webp">
@@ -169,8 +169,8 @@
                                         </picture>
                                     </div>
                                 </button>
-                                <button class="fullscreen__button-next controls__button-next btn-reset">
-                                    <div class="controls__icon-next img">
+                                <button class="fullscreen__button-next controls-fullscreen__button-next btn-reset">
+                                    <div class="controls-fullscreen__icon-next img">
                                         <picture>
                                             <source srcset="@img/icons/icon-next.avif" type="image/avif">
                                             <source srcset="@img/icons/icon-next.webp" type="image/webp">
