--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,12 @@
 
 @@include('html/index/fullscreen.html')
 
+@@include('html/index/about.html')
+
+@@include('html/index/services.html')
+
+@@include('html/index/brends.html')
+
         </main>
 
 @@include('html/parts/footer.html')
