доделан первый вариант стартовой страницы

--- a/src/html/index/brends.html
+++ b/src/html/index/brends.html
@@ -7,7 +7,7 @@
                                 <img loading="lazy" src="@img/icons/prev.png" alt="Кнопка Назад">
                             </button>
                         </div>
-                        <div class="brend-index__swiper swiper">
+                        <div class="brends-index__swiper swiper">
                             <div class="swiper-wrapper">
                                 <!-- слайд -->
                                 <div class="swiper-slide">
