Добавлен раздел О компании

--- a/src/html/index/about.html
+++ b/src/html/index/about.html
@@ -5,13 +5,13 @@
                         <div class="about-index__content">
                             <div class="about-index__text">
                                 <p>
-                                    Морковь Лорем ипсум, экологический томатный суп. Недорогой основной, ни программное обеспечение, также нет, я действительно ненавижу футбол. Но если быть честным. Функционал и стрелы, лук оранжевого цвета. И адрес электронной почты или, улучшите производительность, шпионя за кем-то.
+                                    Компания «ОВС-ГРУПП» специализируется на предоставлении услуг по установке оборудования, внедрению современных передовых технологий, техническому обслуживанию и ремонту оборудования АЗС и нефтебаз.
                                 </p>
                                 <p>
-                                    Обычно пользователи профилируют интересный элемент расписания уже сейчас. Просто футбол, массовое время фристайла. Великая бедность, но бедность. Не смотрите на мультфильмы о бюджетных беспроводных наушниках.
+                                    Также мы являемся опытным и надежным поставщиком оборудования, комплектующих и запасных частей для АЗС, АГЗС, ГНС, нефтебаз, бензовозов и топливозаправщиков от ведущих  производителей нефтегазового оборудования
                                 </p>
                             </div>
-                            <a href="##" class="about-index__button button-more">
+                            <a href="about.html" class="about-index__button button-more">
                                 Подробнее
                             </a>
                         </div>
