--- a/src/html/parts/footer.html
+++ b/src/html/parts/footer.html
@@ -7,7 +7,7 @@
                             <nav class="footer-info__menu menu-footer">
                                 <ul class="menu-footer__list">
                                     <li class="menu-footer__item">
-                                        <a href="##" class="menu-footer__link">
+                                        <a href="about.html" class="menu-footer__link">
                                             <div class="menu-footer__icon img">
                                                 <img loading="lazy" src="@img/icons/arrow.svg" alt="Стрелка меню">
                                             </div>
