--- a/src/html/parts/header.html
+++ b/src/html/parts/header.html
@@ -17,7 +17,7 @@
                         <nav class="menu__body" data-menu-body data-drop-mainBlock>
                             <ul class="menu__list">
                                 <li class="menu__item">
-                                    <a href="##" class="menu__link">
+                                    <a href="about.html" class="menu__link">
                                         <span class="menu__text">О компании</span>
                                     </a>
                                 </li>
