Обновлен раздел О компании

--- a/src/html/about/about.html
+++ b/src/html/about/about.html
@@ -32,7 +32,7 @@
                             </li>
                         </ul>
                         <p>
-                            Мы являемся опытным и надежным поставщиком оборудования, комплектующих и запасных частей для АЗС, АГЗС, ГНС, нефтебаз бензовозов и топливозаправщиков:
+                            Мы являемся опытным и надежным поставщиком оборудования, комплектующих и запасных частей для АЗС, АГЗС, ГНС, нефтебаз, бензовозов и топливозаправщиков:
                         </p>
                         <ul class="about__list">
                             <li class="about__item">
@@ -45,7 +45,7 @@
                                 <div class="about__list-img img">
                                     <img src="@img/icons/arrow.svg" alt="arrow">
                                 </div>
-                                <p>комплектующих и запасных для ТРК, ГРК;</p>
+                                <p>комплектующих и запасных частей для ТРК, ГРК;</p>
                             </li>
                             <li class="about__item">
                                 <div class="about__list-img img">
@@ -57,14 +57,14 @@
                                 <div class="about__list-img img">
                                     <img src="@img/icons/arrow.svg" alt="arrow">
                                 </div>
-                                <p>оборудование и комплектующие для АСУ АЗС: блоки сопряжения, контроллеры, ИБП и др.;</p>
+                                <p>оборудование и комплектующие для АСУ АЗС: блоки сопряжения, контроллеры, ИБП и др.</p>
                             </li>
                         </ul>
                         <p>
                             Для бесперебойной работы АЗС компания «ОВС-ГРУПП» для своих клиентов предлагает на договорной основе постоянное ежемесячное, ежеквартальное или ежегодное техническое обслуживание оборудования. Так же мы предлагаем взять на обслуживание Вашу АЗС с предоставлением технической поддержки и выездом специалиста необходимой квалификации в экстренных, аварийных ситуациях.
                         </p>
                         <p>
-                            На проведение работ во взрывоопасной зоне мы имеем все разрешения, выданные соответствующими государственными органами.  
+                            На проведение работ во взрывоопасной зоне мы имеем все разрешения, выданные соответствующими государственными органами.
                         </p>
                     </div>
                 </div>
