--- a/src/html/index/fullscreen.html
+++ b/src/html/index/fullscreen.html
@@ -20,7 +20,7 @@
                                                     - техническое обслуживание ГРК;
                                                 </li>
                                                 <li class="slide-fullscreen__item">
-                                                    - техническое обслуживание СМДК;
+                                                    - техническое обслуживание СМДК.
                                                 </li>
                                             </ul>
                                         </div>
@@ -49,7 +49,7 @@
                                                     - установка системы управления АЗС;
                                                 </li>
                                                 <li class="slide-fullscreen__item">
-                                                    - прокладка и монтаж трубопровода;
+                                                    - прокладка и монтаж трубопровода.
                                                 </li>
                                             </ul>
                                         </div>
@@ -76,7 +76,7 @@
                                                     - контроллеры, интерфейсные платы для связи ТРК и СУ АЗС;
                                                 </li>
                                                 <li class="slide-fullscreen__item">
-                                                    - метрология;
+                                                    - метрология.
                                                 </li>
                                             </ul>
                                         </div>
@@ -103,7 +103,7 @@
                                                     - техническое обслуживание ГРК;
                                                 </li>
                                                 <li class="slide-fullscreen__item">
-                                                    - техническое обслуживание СМДК;
+                                                    - техническое обслуживание СМДК.
                                                 </li>
                                             </ul>
                                         </div>
