--- a/src/about.html
+++ b/src/about.html
@@ -10,6 +10,8 @@
 
 @@include('html/about/about.html')
 
+@@include('html/about/documents.html')
+
         </main>
 
 @@include('html/parts/footer.html')
