Добавлены попапы на изображения документов

--- a/src/html/about/documents.html
+++ b/src/html/about/documents.html
@@ -3,28 +3,32 @@
                     <h1 class="documents__title title">Разрешительные документы</h1>
                     <ul class="documents__list">
                         <li class="documents__item">
-                            <div class="documents__img img">
-                                <picture>
-                                    <!-- <source srcset="@img/documents/certificate.avif" type="image/avif"> -->
-                                    <source srcset="@img/documents/certificate.webp" type="image/webp">
-                                    <img loading="lazy" src="@img/documents/certificate.jpg.jpg" alt="Свидетельство о гос. регистрации">
-                                </picture>
-                            </div>
-                            <div class="documents__descr">
-                                Свидетельство о гос. регистрации
-                            </div>
+                            <button data-popup-link="certificate" class="btn-reset">
+                                <div class="documents__img img">
+                                    <picture>
+                                        <!-- <source srcset="@img/documents/certificate.avif" type="image/avif"> -->
+                                        <source srcset="@img/documents/certificate.webp" type="image/webp">
+                                        <img loading="lazy" src="@img/documents/certificate.jpg.jpg" alt="Свидетельство о гос. регистрации">
+                                    </picture>
+                                </div>
+                                <div class="documents__descr">
+                                    Свидетельство о гос. регистрации
+                                </div>
+                            </button>
                         </li>
                         <li class="documents__item">
-                            <div class="documents__img img">
-                                <picture>
-                                    <!-- <source srcset="@img/documents/permission.avif" type="image/avif"> -->
-                                    <source srcset="@img/documents/permission.webp" type="image/webp">
-                                    <img loading="lazy" src="@img/documents/permission.jpg.jpg" alt="Свидетельство о гос. регистрации">
-                                </picture>
-                            </div>
-                            <div class="documents__descr">
-                                Разрешение на проведение работ
-                            </div>
+                            <button  data-popup-link="permission" class="btn-reset">
+                                <div class="documents__img img">
+                                    <picture>
+                                        <!-- <source srcset="@img/documents/permission.avif" type="image/avif"> -->
+                                        <source srcset="@img/documents/permission.webp" type="image/webp">
+                                        <img loading="lazy" src="@img/documents/permission.jpg.jpg" alt="Свидетельство о гос. регистрации">
+                                    </picture>
+                                </div>
+                                <div class="documents__descr">
+                                    Разрешение на проведение работ
+                                </div>
+                            </button>
                         </li>
                     </ul>
                 </div>
