--- a/src/html/parts/header.html
+++ b/src/html/parts/header.html
@@ -1,4 +1,4 @@
-        <header class="header" data-scroll="150">
+        <header class="header" data-scroll="150" data-lock-padding>
             <div class="header__container container">
                 <div class="header__wrap">
                     <div class="header__logo logo">
