--- a/src/html/parts/footer.html
+++ b/src/html/parts/footer.html
@@ -17,7 +17,7 @@
                                         </a>
                                     </li>
                                     <li class="menu-footer__item">
-                                        <a href="##" class="menu-footer__link">
+                                        <a href="contacts.html" class="menu-footer__link">
                                             <div class="menu-footer__icon img">
                                                 <img loading="lazy" src="@img/icons/arrow.svg" alt="Стрелка меню">
                                             </div>
@@ -32,7 +32,7 @@
                         <li class="top-footer__item footer-clients">
                             <ul class="menu-footer__list">
                                 <li class="menu-footer__item">
-                                    <h2 class="footer-clients__title title-footer">КЛИЕНТАМ</h2>
+                                 <!--   <h2 class="footer-clients__title title-footer">КЛИЕНТАМ</h2>
                                     <nav class="footer-clients__menu menu-footer" data-spoilers>
                                         <div class="menu-footer__items">
                                             <button class="menu-footer__button btn-reset" type="button" tabindex="-1" data-spoiler>
@@ -110,7 +110,7 @@
                                                 </li>
                                             </ul>
                                         </div>
-                                    </nav>
+                                    </nav> -->
                                 </li>
                                 <li class="menu-footer__item">
                                 </li>
