изменение css-шаблона

--- a/src/html/parts/header.html
+++ b/src/html/parts/header.html
@@ -21,7 +21,7 @@
                                         <span class="menu__text">О компании</span>
                                     </a>
                                 </li>
-                               <!-- <li class="menu__item" data-drop-parent>
+                               <li class="menu__item" data-drop-parent>
                                     <button class="menu__button btn-reset" data-drop-btn>
                                         <span class="menu__text">Услуги</span>
                                         <span class="menu__arrow img">
@@ -112,7 +112,7 @@
                                             </li>
                                         </ul>
                                     </div>
-                                </li>-->
+                                </li>
                                 <li class="menu__item">
                                     <a href="contacts.html" class="menu__link">
                                         <span class="menu__text">Контакты</span>
