изменение главной страницы по новому шаблону

--- a/src/html/index/brends.html
+++ b/src/html/index/brends.html
@@ -2,7 +2,7 @@
                 <div class="brends-index__container container">
                     <h1 class="brends-index__title title">Производители</h1>
                     <div class="brends-index__wrap">
-                        <div class="brends-index__controls controls-brends">
+                        <div class="brends-index__controls brends-index__controls--left controls-brends">
                             <button class="controls-brends__button-prev btn-reset img">
                                 <img loading="lazy" src="@img/icons/prev.png" alt="Кнопка Назад">
                             </button>
@@ -88,7 +88,7 @@
                                 <!-- конец удаление -->
                             </div>
                         </div>
-                        <div class="brends-index__controls controls-brends">
+                        <div class="brends-index__controls brends-index__controls--right controls-brends">
                             <button class="controls-brends__button-next btn-reset img">
                                 <img loading="lazy" src="@img/icons/next.png" alt="Кнопка Назад">
                             </button>
