доработка страниц О компании и контакты по новому шаблону

--- a/src/html/about/documents.html
+++ b/src/html/about/documents.html
@@ -2,6 +2,7 @@
                 <div class="about-documents__container documents container">
                     <h1 class="documents__title title">Разрешительные документы</h1>
                     <ul class="documents__list">
+                        <li class="documents__item documents__item--first"></li>
                         <li class="documents__item">
                             <button data-popup-link="certificate" class="btn-reset">
                                 <div class="documents__img img">
