Доделана страница Контакты

--- a/src/contacts.html
+++ b/src/contacts.html
@@ -16,5 +16,6 @@
 @@include('html/parts/footer.html')
 
     </div>
+    <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&amp;apikey=<ваш API-ключ>"></script>
 </body>
 </html>
