--- a/src/html/contacts/maps.html
+++ b/src/html/contacts/maps.html
@@ -1,5 +1,4 @@
-            <div class="maps">
-                <div class="maps__maps">
-                    <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A01c68c05b9d41356eab7d0251359c7b8ecbe80520df7bcb2a739cbeda258c68d&amp;source=constructor" width="100%" height="100%" frameborder="0"></iframe>
-                </div>
+            <div class="map">
+                <h1 class="title map__title">Как проехать</h1>
+                <div id="map" class="map__map" data-placemark="47.9869690363832,37.7890936052625" data-gps="47.9869690363832,37.789157978278865" data-zoom="16" data-balloon-header="ООО ОВС-ГРУПП" data-balloon-body="3 этаж, оф. 305"></div>
             </div>
