Исправление ошибок в соответствии с W3C

--- a/src/html/about/documents.html
+++ b/src/html/about/documents.html
@@ -4,7 +4,7 @@
                     <ul class="documents__list">
                         <li class="documents__item documents__item--first"></li>
                         <li class="documents__item">
-                            <button data-popup-link="certificate" class="btn-reset">
+                            <div data-popup-link="certificate">
                                 <div class="documents__img img">
                                     <picture>
                                         <!-- <source srcset="@img/documents/certificate.avif" type="image/avif"> -->
@@ -15,10 +15,10 @@
                                 <div class="documents__descr">
                                     Свидетельство о гос. регистрации
                                 </div>
-                            </button>
+                            </div>
                         </li>
                         <li class="documents__item">
-                            <button  data-popup-link="permission" class="btn-reset">
+                            <div  data-popup-link="permission">
                                 <div class="documents__img img">
                                     <picture>
                                         <!-- <source srcset="@img/documents/permission.avif" type="image/avif"> -->
@@ -29,7 +29,7 @@
                                 <div class="documents__descr">
                                     Разрешение на проведение работ
                                 </div>
-                            </button>
+                            </div>
                         </li>
                     </ul>
                 </div>
