--- a/src/html/index/fullscreen.html
+++ b/src/html/index/fullscreen.html
@@ -161,22 +161,14 @@
                             <div class="fullscreen__progress"></div>
                             <div class="controls-fullscreen__buttons">
                                 <button class="fullscreen__button-prev controls-fullscreen__button-prev btn-reset">
-                                    <div class="controls-fullscreen__icon-prev img">
-                                        <picture>
-                                          <source srcset="@img/icons/icon-prev.avif" type="image/avif">
-                                          <source srcset="@img/icons/icon-prev.webp" type="image/webp">
-                                          <img loading="lazy" src="@img/icons/icon-prev.png" alt="Стрелка предыдущий слайд">
-                                        </picture>
-                                    </div>
+                                    <span class="controls-fullscreen__icon-prev img">
+                                        <img loading="lazy" src="@img/icons/icon-prev.png" alt="Стрелка предыдущий слайд">
+                                    </span>
                                 </button>
                                 <button class="fullscreen__button-next controls-fullscreen__button-next btn-reset">
-                                    <div class="controls-fullscreen__icon-next img">
-                                        <picture>
-                                            <source srcset="@img/icons/icon-next.avif" type="image/avif">
-                                            <source srcset="@img/icons/icon-next.webp" type="image/webp">
-                                            <img loading="lazy" src="@img/icons/icon-next.png" alt="Стрелка следущий слайд">
-                                          </picture>
-                                    </div>
+                                    <span class="controls-fullscreen__icon-next img">
+                                        <img loading="lazy" src="@img/icons/icon-next.png" alt="Стрелка следущий слайд">
+                                    </span>
                                 </button>
                             </div>
                         </div>
