--- a/src/html/parts/footer.html
+++ b/src/html/parts/footer.html
@@ -1,8 +1,8 @@
         <footer class="footer">
             <section class="footer__top">
                 <div class="top-footer container">
-                    <ul class="top-footer__list">
-                        <li class="top-footer__item footer-info">
+                    <div class="top-footer__list">
+                        <div class="top-footer__item footer-info">
                             <h2 class="footer-info__title title-footer">ИНФОРМАЦИЯ</h2>
                             <nav class="footer-info__menu menu-footer">
                                 <ul class="menu-footer__list">
@@ -28,8 +28,8 @@
                                     </li>
                                 </ul>
                             </nav>
-                        </li>
-                        <li class="top-footer__item footer-clients">
+                        </div>
+                        <div class="top-footer__item footer-clients">
                             <ul class="menu-footer__list">
                                 <li class="menu-footer__item">
                                    <h2 class="footer-clients__title title-footer">КЛИЕНТАМ</h2>
@@ -112,14 +112,12 @@
                                         </div>
                                     </nav>
                                 </li>
-                                <li class="menu-footer__item">
-                                </li>
                             </ul>
-                        </li>
-                        <li class="top-footer__item footer-address">
-                            <h2 class="footer-address__title title-footer">КОНТАКТЫ </h2>
-                            <adress class="footer-address__address address">
-                                <div class="address__item">
+                        </div>
+                        <address class="top-footer__item footer-address">
+                            <div class="footer-address__title title-footer">КОНТАКТЫ </div>
+                            <ul class="footer-address__address address">
+                                <li class="address__item">
                                     <div class="address__icons img">
                                         <img src="@img/icons/phone.png" alt="Иконка телефона">
                                     </div>
@@ -134,8 +132,8 @@
                                         </div>
                                         <p class="address__descr">Режим работы: Пн-Пт - 9:00- 17:00</p>
                                     </div>
-                                </div>
-                                <div class="address__item">
+                                </li>
+                                <li class="address__item">
                                     <div class="address__icons img">
                                         <img src="@img/icons/mail.png" alt="Иконка Email">
                                     </div>
@@ -147,8 +145,8 @@
                                             </a>
                                         </div>
                                     </div>
-                                </div>
-                                <div class="address__item">
+                                </li>
+                                <li class="address__item">
                                     <div class="address__icons img">
                                         <img src="@img/icons/location.png" alt="Иконка Email">
                                     </div>
@@ -159,10 +157,10 @@
                                             </a>
                                         </div>
                                     </div>
-                                </div>
-                            </adress>
-                        </li>
-                    </ul>
+                                </li>
+                            </ul>
+                        </address>
+                    </div>
                 </div>
             </section>
             <div class="footer__bottom bottom-footer">
