--- a/src/contacts.html
+++ b/src/contacts.html
@@ -16,6 +16,6 @@
 @@include('html/parts/footer.html')
 
     </div>
-    <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&amp;apikey=<ваш API-ключ>"></script>
+    <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&amp;apikey=2be7a4ca-859a-472b-b486-b7dea1fbcf66"></script>
 </body>
 </html>
